--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto site</title>
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <title>teste</title>
 </head>
 <body>
-    <main>
-        <header>
-            <h1>Título do Site</h1>
-        </header>
-        <article>
-            <h2>Título do Site</h2>
-            <p>Texto Artigo 002</p>
-        </article>
-    </main>
+    <div class="container">
+        <h1 class="h5 bg-primary">Título</h1>
+        <h1 class="h1 bg-secondary text-center">Título</h1>
+        <h1 class="h4">Título</h1>
+        <h1 class="h5">Título</h1>
+    </div>
 </body>
 </html>
